--- a/vignelli-1.html
+++ b/vignelli-1.html
@@ -15,16 +15,18 @@
     <article>
 
         <nav>
-
+            <table>
             <ul>
-                <li><a href="#intro">Intro-<br>duction</a></li>
-                <li><a href="#dev">Developing<br>Style</a></li>
-                <li><a href="#typo">Typo-<br>graphy</a></li>
-                <li><a href="#corp">Corporate<br>Design</a></li>
-                <li><a href="#nyc">NYC<br>Subway</a></li>
-                <li><a href="#conc">Conc-<br>lusion</a></li>
+            <tr>
+                <td><li><a href="#intro">Intro-<br>duction</a></li></td>
+                <td><li><a href="#dev">Developing<br>Style</a></li></td>
+                <td><li><a href="#typo">Typo-<br>graphy</a></li></td>
+                <td><li><a href="#corp">Corporate<br>Design</a></li></td>
+                <td><li><a href="#nyc">NYC<br>Subway</a></li></td>
+                <td><li><a href="#conc">Conc-<br>lusion</a></li></td>
+            </tr>
             </ul>
-
+            </table>
         </nav>
 
         <section>
@@ -116,8 +118,26 @@
         <footer>
 
             <h3>Bibliography</h3>
+
+            <h4>Books</h4>
+
+                <p>Conradi, J. (2009) <i>Unimark International:</i> The Design of Business and the Business Design. 1st edn. Lars Muller.</p>
+                <p>Lloyd, P. and Ovenden, M. (2012) <i>Vignelli Transit Maps.</i> Amsterdam, Netherlands: Amsterdam University Press.</p>
+                <p>Vignelli, M. (2007) <i>Vignelli From A to Z.</i> Images Publishing Dist Ac.</p>
+                <p>Vignelli, M. (2010) <i>The Vignelli Canon.</i> Lars Müller.</p>
+
+            <h4>Webpages</h4>
+
+                <p><i>Archivio Grafica Italiana, Massimo Vignelli</i> (no date). <br>Available at: http://www.archiviograficaitaliana.com/designers/7/massimovignelli <br>(Accessed: November 23, 2022).</p>
+                <p><i>Designculture • Massimo Vignelli</i> (no date). <br>Available at: http://www.designculture.it/interview/massimo-vignelli.html <br>(Accessed: November 24, 2022).</p>
+                <p>Martin, S. (2021) <i>Graphic Design Legend Massimo Vignelli’s NYC Subway Design.</i> <br>Available at: https://www.ceros.com/inspire/originals/massimo-vignelli-nyc-subway/ <br>(Accessed: November 24, 2022).</p>
+                <p><i>Massimo Vignelli</i> (no date). <br>Available at: https://www.moma.org/artists/6155 <br>(Accessed: November 23, 2022).</p>
+                <p><i>Massimo Vignelli | Biography, Designs and Facts</i> (no date). <br>Available at: https://www.famousgraphicdesigners.org/massimo-vignelli <br>(Accessed: November 23, 2022).</p>
+                <p><i>Remembering Massimo Vignelli, Modernist Master</i> (no date). <br>Available at: https://99designs.co.uk/blog/famous-design/remembering-massimo-vignelli-modernist-master/ <br>(Accessed: November 22, 2022).</p>
+                <p><i>utilitarianism noun - Definition, pictures, pronunciation and usage notes</i> | Oxford Advanced American Dictionary at OxfordLearnersDictionaries.com (no date). <br>Available at: https://www.oxfordlearnersdictionaries.com/definition/american_english/utilitarianism <br>(Accessed: November 22, 2022).</p>
+
     
-            <p>Markup and Design: Noah Weston.</p>
+            <h5>Markup and Design: Noah Weston.</h5>
             <a href="mailto:Weston-N@ulster.ac.uk">Get in touch</a>
             <a href="https://blushing-cardboard-aac.notion.site/IxD-Noah-Weston-6703f5bad2934f169c02472c828fdce0">See more of my work</a>
     
