--- a/vignelli-1.html
+++ b/vignelli-1.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 
 <html lang="en-GB">
+
     <head>
         <meta charset="utf-8">
         <meta name="author" content="Noah Weston">
         <meta name="viewport" content="width=device-width,intial-scale=1">
         <title>Massimo Vignelli</title>
+        <link href="css/style.css" type="text/css" rel="stylesheet">
     </head>
-
-    <link href="css/style.css" type="text/css" rel="stylesheet">
 
 <body>
 
@@ -56,6 +56,11 @@
         </section>
 
         <section>
+            <img src="img/img-1.jpg" alt="Massimo Vignelli"/>
+            <h5>Massimo Vignelli<br>(1931-2014)</h5>
+        </section>
+
+        <section>
 
             <h2 id="dev">Developing Style</h2>
 
@@ -70,6 +75,11 @@
         </section>
 
         <section>
+            <img src="img/img-2.jpg" alt="Playbill for Piccolo Teatro di Milano"/>
+            <h5>Playbill for Piccolo Teatro di Milano<br>(1964)</h5>
+        </section>
+
+        <section>
 
             <h2 id="typo">Typography</h2>
 
@@ -79,6 +89,11 @@
 
                 <p>Vignelli is widely credited for popularising the use of Helvetica; it can be seen throughout nearly all his most influential work, a lot of which is his corporate design work.</p>
     
+        </section>
+
+        <section>
+            <img src="img/img-3.jpg" alt="Massimo Vignelli's A Few Basic Tpyefaces"/>
+            <h5>Massimo Vignelli's A Few Basic Tpyefaces<br>(2010)</h5>
         </section>
 
         <section>
@@ -96,6 +111,11 @@
         </section>
 
         <section>
+            <img src="img/img-4.jpg" alt="American Airlines Logo"/>
+            <h5>American Airlines Logo<br>(1967)</h5>
+        </section>
+
+        <section>
 
             <h2 id="nyc">NYC Subway</h2>
 
@@ -105,6 +125,13 @@
 
                 <p>Along with the signage, Vignelli created a modernist navigation system to replace the existing map. Rather than adhering to the true geography of the subway, Vignelli created a design system which would be instantly understandable, using evenly spaced stations on a geometric grid, and train lines of distinct colours which form along the grid. The “dot to dot” <cite>(Martin, 2021)</cite> system Vignelli designed allowed for ease of reading and navigation, which, in theory, should have worked, however, the inaccurate geography led to confusion from the residents of NYC <cite>(Hillery, 2021)</cite>. The reductive and structured layout of Vignelli’s Subway map was truly utilitarian, being designed for ease of usability, instead of focusing on geographical correctness, and while, the people of NYC may have disliked it, this was due to human familiarity rather than poor design, which further demonstrates how Vignelli used typography, colour, and form to create utilitarian design.</p>
         
+        </section>
+
+        <section>
+            <img src="img/img-5.jpg" alt="NYC Subway Sign"/>
+            <h5>NYC Subway Sign<br>(1972)</h5>
+            <img src="img/img-6.jpg" alt="NYC Subway Map"/>
+            <h5>NYC Subway Map<br>(1972)</h5>
         </section>
 
         <section>
