--- a/vignelli-2.html
+++ b/vignelli-2.html
@@ -16,18 +16,16 @@
     <article>
 
         <nav>
-            <table>
-            <ul>
-            <tr>
-                <td><li><a href="#intro">Intro-<br>duction</a></li></td>
-                <td><li><a href="#dev">Developing<br>Style</a></li></td>
-                <td><li><a href="#typo">Typo-<br>graphy</a></li></td>
-                <td><li><a href="#corp">Corporate<br>Design</a></li></td>
-                <td><li><a href="#nyc">NYC<br>Subway</a></li></td>
-                <td><li><a href="#conc">Conc-<br>lusion</a></li></td>
-            </tr>
+            
+            <ul class="row3">
+                <div class="c3"><li><a href="#intro">Intro-<br>duction</a></li></div>
+                <div class="c3"><li><a href="#dev">Developing<br>Style</a></li></div>
+                <div class="c3"><li><a href="#typo">Typo-<br>graphy</a></li></div>
+                <div class="c3"><li><a href="#corp">Corporate<br>Design</a></li></div>
+                <div class="c3"><li><a href="#nyc">NYC<br>Subway</a></li></div>
+                <div class="c3"><li><a href="#conc">Conc-<br>lusion</a></li></div>
             </ul>
-            </table>
+        
         </nav>
 
 
