--- a/vignelli-2.html
+++ b/vignelli-2.html
@@ -11,10 +11,10 @@
         <link rel="stylesheet" href="https://use.typekit.net/cdd1fhi.css">
     </head>
 
-<body>
+<body id="top">
 
     <article>
-
+        <a href="#top"><svg class="back-to-top" id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 222.67 137.94"><defs><style>.cls-1{fill:#1d1d1b;}</style></defs><rect class="cls-1" x="275.88" y="67.85" width="37.62" height="157.45" transform="translate(-158.32 173.7) rotate(-45)"/><rect class="cls-1" x="191.15" y="67.85" width="37.62" height="157.45" transform="translate(24.15 -183.14) rotate(45)"/></svg></a>
         <nav>
             <div class="flexcontain">
             <ul class="row3">
