--- a/vignelli-2.html
+++ b/vignelli-2.html
@@ -253,7 +253,7 @@
                         <div class="footerp">
 
                             <p>Conradi, J. (2009) <br><i>Unimark International: The Design of Business and the Business Design.</i><br>Lars Muller.</p>
-                            <p>Lloyd, P. and Ovenden, M. (2012) <br><i>Vignelli Transit Maps.</i> <br>Amsterdam, Netherlands: Amsterdam University Press.</p>
+                            <p>Lloyd, P. and Ovenden, M. (2012) <br><i>Vignelli Transit Maps.</i> <br>Amsterdam University Press.</p>
                             <p>Vignelli, M. (2007) <br><i>Vignelli From A to Z.</i> <br>Images Publishing Dist Ac.</p>
                             <p>Vignelli, M. (2010) <br><i>The Vignelli Canon.</i> <br>Lars Müller.</p>
                         
@@ -263,13 +263,13 @@
 
                         <div class="footerp">
 
-                            <p>Archivio Grafica Italiana. (no date). <i>Massimo Vignelli.</i> <br><a href="http://www.archiviograficaitaliana.com/designers/7/massimovignelli ">Available Here</a> <br>(Accessed: November 23, 2022).</p>
-                            <p>Bigman, A. (2014) <i>Remembering Massimo Vignelli, Modernist Master.</i> <br><a href="https://99designs.co.uk/blog/famous-design/remembering-massimo-vignelli-modernist-master/ ">Available Here</a> <br>(Accessed: November 22, 2022).</p>
-                            <p>Hillery, A. (2021) <i>How Vignelli’s Design Still Influences NYC’s Subway Maps Today.</i> <br><a href="https://medium.com/nightingale/how-vignellis-design-still-influences-nyc-s-subway-maps-today-63159e8845c9 ">Available Here</a> <br>(Accessed: November 23, 2022).</p>
-                            <p>Martin, S. (2021) <i>Graphic Design Legend Massimo Vignelli’s NYC Subway Design.</i> <br><a href="https://www.ceros.com/inspire/originals/massimo-vignelli-nyc-subway/ ">Available Here</a>  <br>(Accessed: November 24, 2022).</p>
-                            <p>MoMA (no date) <i>Massimo Vignelli.</i> <br><a href="https://www.moma.org/artists/6155 ">Available Here</a>  <br>(Accessed: November 23, 2022).</p>
-                            <p>Munari, N.M. (2013) <i>Designculture • Massimo Vignelli.</i> <br><a href="http://www.designculture.it/interview/massimo-vignelli.html ">Available Here</a>  <br>(Accessed: November 24, 2022).</p>
-                            <p>Oxford Dictionary (no date) <i>utilitarianism noun.</i> <br><a href="https://www.oxfordlearnersdictionaries.com/definition/american_english/utilitarianism ">Available Here</a> <br>(Accessed: November 22, 2022).</p>
+                            <p>Archivio Grafica Italiana. (no date). <i>Massimo Vignelli.</i> <br><a href="http://www.archiviograficaitaliana.com/designers/7/massimovignelli ">Available Here</a> <br>(Accessed: November 23, 2022)</p>
+                            <p>Bigman, A. (2014) <i>Remembering Massimo Vignelli, Modernist Master.</i> <br><a href="https://99designs.co.uk/blog/famous-design/remembering-massimo-vignelli-modernist-master/ ">Available Here</a> <br>(Accessed: November 22, 2022)</p>
+                            <p>Hillery, A. (2021) <i>How Vignelli’s Design Still Influences NYC’s Subway Maps Today.</i> <br><a href="https://medium.com/nightingale/how-vignellis-design-still-influences-nyc-s-subway-maps-today-63159e8845c9 ">Available Here</a> <br>(Accessed: November 23, 2022)</p>
+                            <p>Martin, S. (2021) <i>Graphic Design Legend Massimo Vignelli’s NYC Subway Design.</i> <br><a href="https://www.ceros.com/inspire/originals/massimo-vignelli-nyc-subway/ ">Available Here</a>  <br>(Accessed: November 24, 2022)</p>
+                            <p>MoMA (no date) <i>Massimo Vignelli.</i> <br><a href="https://www.moma.org/artists/6155 ">Available Here</a>  <br>(Accessed: November 23, 2022)</p>
+                            <p>Munari, N.M. (2013) <i>Designculture • Massimo Vignelli.</i> <br><a href="http://www.designculture.it/interview/massimo-vignelli.html ">Available Here</a>  <br>(Accessed: November 24, 2022)</p>
+                            <p>Oxford Dictionary (no date) <i>utilitarianism noun.</i> <br><a href="https://www.oxfordlearnersdictionaries.com/definition/american_english/utilitarianism ">Available Here</a> <br>(Accessed: November 22, 2022)</p>
                     
                         </div>
 
