--- a/vignelli-4.html
+++ b/vignelli-4.html
@@ -8,7 +8,7 @@
         <meta name="author" content="Noah Weston">
         <meta name="viewport" content="width=device-width,intial-scale=1">
         <title>Massimo Vignelli</title>
-        <link href="css/style-2.css" type="text/css" rel="stylesheet">
+        <link href="css/style-3.css" type="text/css" rel="stylesheet">
         <link rel="stylesheet" href="https://use.typekit.net/cdd1fhi.css">
 
     </head>
@@ -25,12 +25,12 @@
 
                     <ul class="row3">
                         
-                        <div class="c3"><li><a href="#intro">Intro-<br>duction</a></li></div>
-                        <div class="c3"><li><a href="#dev">Developing<br>Style</a></li></div>
-                        <div class="c3"><li><a href="#typo">Typo-<br>graphy</a></li></div>
-                        <div class="c3"><li><a href="#corp">Corporate<br>Design</a></li></div>
-                        <div class="c3"><li><a href="#nyc">NYC<br>Subway</a></li></div>
-                        <div class="c3"><li><a href="#conc">Conc-<br>lusion</a></li></div>
+                        <div class="c3"><li><a href="#intro">Introduction</a></li></div>
+                        <div class="c3"><li><a href="#dev">Developing Style</a></li></div>
+                        <div class="c3"><li><a href="#typo">Typography</a></li></div>
+                        <div class="c3"><li><a href="#corp">Corporate Design</a></li></div>
+                        <div class="c3"><li><a href="#nyc">NYC Subway</a></li></div>
+                        <div class="c3"><li><a href="#conc">Conclusion</a></li></div>
 
                     </ul>
 
